--- a/src/WeatherForecast/WeatherForecast.Api/WeatherForecast.Api.csproj
+++ b/src/WeatherForecast/WeatherForecast.Api/WeatherForecast.Api.csproj
@@ -16,4 +16,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WeatherForecast.Application\WeatherForecast.Application.csproj" />
+    <ProjectReference Include="..\WeatherForecast.Domain\WeatherForecast.Domain.csproj" />
+    <ProjectReference Include="..\WeatherForecast.Infrastructure\WeatherForecast.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
