--- a/src/WeatherForecast/WeatherForecast.Application/WeatherForecast.Application.csproj
+++ b/src/WeatherForecast/WeatherForecast.Application/WeatherForecast.Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
