add docker compose with sql db

--- a/src/WeatherForecast/WeatherForecast.Api/appsettings.json
+++ b/src/WeatherForecast/WeatherForecast.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=db;Database=WeatherForecastDb;User=sa;Password=DbP@ssword!;TrustServerCertificate=True;MultiSubnetFailover=True;Encrypt=false;Integrated Security=False"
+  }
 }
